fix gap between #sidebar and #footer

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -431,7 +431,7 @@ kbd {
 }
 
 #sidebar {
-	bottom: 48px;
+	bottom: 45px;
 	left: 0;
 	overflow: auto;
 	overflow-x: hidden;
